--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,11 @@
   "name" : "Local Sheriff",
   "applications": {
     "gecko": {
-      "id": "modi.konark@gmail.com",
+      "id": "localsheriff@gmail.com",
       "strict_min_version": "49.0"
     }
   },
-  "version" : "0.3",
+  "version" : "0.4",
   "description" : "Local sheriff is a reconnaissance tool in your browser for your data.",
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';",
   "icons": {
@@ -15,7 +15,7 @@
   "browser_action": {
     "default_icon": "icons/tool-icon.png"
   },
-  "permissions": [ "http://*/*", "https://*/*","tabs", "activeTab", "webRequest", "unlimitedStorage", "webNavigation", "<all_urls>"],
+  "permissions": [ "http://*/*", "https://*/*","tabs", "activeTab", "webRequest", "webRequestBlocking","unlimitedStorage", "webNavigation", "<all_urls>"],
   "background": {
     "scripts": ["static/js/dexie.js", "database.js", "background.js"]
   },
