--- a/manifest.json
+++ b/manifest.json
@@ -2,25 +2,22 @@
   "name" : "Local Sheriff",
   "applications": {
     "gecko": {
-      "id": "localsheriff@gmail.com",
-      "strict_min_version": "49.0"
+      "id": "localsheriff@cliqz.com",
+      "strict_min_version": "62.0"
     }
   },
-  "version" : "0.5",
+  "version" : "0.6",
   "description" : "Local sheriff is a reconnaissance tool in your browser for your data.",
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';",
   "icons": {
     "256": "icons/sheriff.png"
   },
   "browser_action": {
-    "default_icon": "icons/tool-icon.png"
+    "default_icon": "icons/sheriff-128x128.png"
   },
   "permissions": [ "http://*/*", "https://*/*","tabs", "activeTab", "webRequest", "webRequestBlocking","unlimitedStorage", "webNavigation", "<all_urls>"],
   "background": {
     "scripts": ["static/js/dexie.js", "database.js", "background.js"]
-  },
-  "browser_action": {
-    "default_title": ""
   },
   "content_scripts": [{
     "matches" : ["http://*/*", "https://*/*"],
