--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name" : "Local Sheriff",
   "applications": {
     "gecko": {
-      "id": "localsheriff@cliqz.com",
+      "id": "modi.konark@gmail.com",
       "strict_min_version": "62.0"
     }
   },
