--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,11 @@ insert_final_newline = true
 charset = utf-8
 trim_trailing_whitespace = true
 
-[*.{es,js,json,jsm,jsx,ts}]
+[*.json]
+indent_style = space
+indent_size = 2
+
+[*.{es,js,jsm,jsx,ts}]
 indent_style = tab
 indent_size = 1
+tab_width = 2
