--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dexie": "^2.0.4"
   },
   "devDependencies": {
+    "@ampproject/rollup-plugin-closure-compiler": "^0.9.0",
     "concurrently": "^4.1.0",
     "rollup": "^1.15.6",
     "rollup-plugin-commonjs": "^10.0.0",
