move bundles to dist folder and make minification optional

--- a/manifest.json
+++ b/manifest.json
@@ -17,12 +17,12 @@
   },
   "permissions": [ "http://*/*", "https://*/*","tabs", "activeTab", "webRequest", "webRequestBlocking","unlimitedStorage", "webNavigation", "<all_urls>"],
   "background": {
-    "scripts": ["background.bundle.js"]
+    "scripts": ["./dist/background.bundle.js"]
   },
   "content_scripts": [{
     "matches" : ["http://*/*", "https://*/*"],
     "match_about_blank": true,
-    "js": ["content-script.bundle.js"],
+    "js": ["./dist/content-script.bundle.js"],
     "all_frames": true,
     "run_at": "document_end"
   }],
