--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
     "build": "rollup --config rollup.config.js --environment BUILD:production",
     "prestart": "npm run clean",
     "watch": "rollup --config rollup.config.js --watch",
-    "prestart": "npm run clean",
     "lint": "web-ext lint",
     "start": "concurrently 'npm run watch' 'web-ext run --source-dir .'",
-    "update-wtm": "curl 'https://whotracks.me/data/trackerdb.json' > whotracksme.json",
-    "prestart": "npm run clean"
+    "update-wtm": "curl 'https://whotracks.me/data/trackerdb.json' > whotracksme.json"
   },
   "repository": {
     "type": "git",
@@ -34,12 +32,11 @@
     "dexie": "^2.0.4"
   },
   "devDependencies": {
-    "@ampproject/rollup-plugin-closure-compiler": "^0.9.0",
-    "concurrently": "^4.1.0",
-    "rollup": "^1.15.6",
-    "rollup-plugin-commonjs": "^10.0.0",
+    "@ampproject/rollup-plugin-closure-compiler": "^0.10.0",
+    "concurrently": "^4.1.1",
+    "rollup": "^1.17.0",
     "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.0.3",
-    "web-ext": "^3.0.0"
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "web-ext": "^3.1.1"
   }
 }
